Fix: 1) small css fix, section heading aligned in center made it align to left

--- a/src/screens/landingScreen/landingScreen.css
+++ b/src/screens/landingScreen/landingScreen.css
@@ -68,6 +68,7 @@
 
 .SectionHeading {
   font-size: 1.5rem;
+  align-self: flex-start;
 }
 
 .ProjectsSection{
